2월 1일 - 허민성
1. 보안
2. 카카오, 네이버, 구글 소셜 로그인
3. 검색 -동의어/ 한영검색